--- a/cmake_builder/linphone_package/CMakeLists.txt
+++ b/cmake_builder/linphone_package/CMakeLists.txt
@@ -65,12 +65,10 @@ set(PACKAGE_VERSION "${LINPHONE_VERSION}")
 # Create sdk-temp folder where we can find all needed files (libs, includes etc.)
 
 file(REMOVE_RECURSE "${LINPHONE_SDK_TMP}")
-message(${LINPHONE_SDK_DIR})
+message(" Linphone_SDK_DIR : ${LINPHONE_SDK_DIR}")
 file(COPY "${LINPHONE_SDK_DIR}/" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
-file(GLOB MINIZIP_FILES "${CMAKE_SOURCE_DIR}/submodules/externals/minizip/build-minizip/OUTPUT/*")
-file(COPY ${MINIZIP_FILES} DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/desktop/")
 if(APPLE)
-    execute_process(COMMAND install_name_tool -id "@executable_path/../Frameworks/libminizip.dylib" "${CMAKE_CURRENT_BINARY_DIR}/desktop/lib/libminizip.dylib")
+    execute_process(COMMAND install_name_tool -id "@executable_path/../Frameworks/libminizip.dylib" "${CMAKE_INSTALL_PREFIX}/lib/libminizip.dylib")
 elseif(WIN32)
     
 endif()
