--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ CMakeLists.txt.user
 build-*-Debug
 build-*-Default
 prepare.conf.user
+build-desktop/*
 
 # Tags -------------------------------------------------------------------------
 
