Update CI for new building

--- a/.gitlab-ci-files/job-linux-desktop.yml
+++ b/.gitlab-ci-files/job-linux-desktop.yml
@@ -16,28 +16,19 @@
     - echo $DEFAULT_LINUX_CMAKE_OPTIONS
     - echo $CMAKE_OPTIONS
     - echo $CMAKE_SANITIZER_OPTIONS
-# SDK Building
-    - mkdir -p linphone-sdk/build-sdk
-    - cd linphone-sdk/build-sdk
+# SDK Building and Minizip submodule
+    - cd build-desktop
     - cmake .. -G "$CMAKE_GENERATOR" -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
-    - cmake --build . --target sdk $LBC_NODEBUG_OPTIONS
-    - cd ../../submodules/externals/minizip    
-# Minizip submodule Building
-    - mkdir -p build-minizip
-    - cd build-minizip
-    - cmake .. -G "$CMAKE_GENERATOR" $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS -DCMAKE_INSTALL_PREFIX=OUTPUT -DCMAKE_PREFIX_PATH="../../../linphone-sdk/build-sdk/linphone-sdk/desktop"
     - cmake --build . --target all $LBC_NODEBUG_OPTIONS
-    - cmake --build . --target install 
-# Desktop Building
-    - cd ../../../../build-desktop
-    - cmake .. -G "$CMAKE_GENERATOR" $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS -DCMAKE_INSTALL_PREFIX=OUTPUT
-    - cmake --build . --target all -- $ADDITIONAL_BUILD_OPTIONS
-    - cmake --build . --target install -- $ADDITIONAL_BUILD_OPTIONS
+# Minizip install to OUTPUT folder
+    - cmake --build . --target all $LBC_NODEBUG_OPTIONS
+# Update CMake installation    
+    - cmake .. -G "$CMAKE_GENERATOR" $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
+    - cmake --build . --target linphone-qt $LBC_NODEBUG_OPTIONS
+    - cmake --build . --target install
 
   artifacts:
     paths:
       - build-desktop/OUTPUT
-      - linphone-sdk/build-sdk/linphone-sdk/desktop
-      - submodules/externals/minizip/build-minizip/OUTPUT
     expire_in: 1 week
 
