Remove options override

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,33 +60,33 @@ option(ENABLE_UPDATE_CHECK "Enable update check." NO)
 option(ENABLE_UNIT_TESTS "Enable unit test of SDK." NO)
 option(ENABLE_TOOLS "Enable tools of SDK" NO)
 
-option(ENABLE_GPL_THIRD_PARTIES "" YES)
-option(ENABLE_NON_FREE_CODECS "Allow inclusion of non-free codecs in the build." YES)
-option(ENABLE_AMRNB "" YES)
-option(ENABLE_AMRWB "" YES)
-option(ENABLE_BV16 "Build mediastreamer2 with the BV16 codec." YES)
-option(ENABLE_G729 "Build mediastreamer2 with the G726 codec." YES)
-#option(ENABLE_G729B_CNG "Build mediastreamer2 with G729 annex B cng." NO)
-option(ENABLE_GSM "Build mediastreamer2 with the GSM codec." YES)
-option(ENABLE_ILBC "" YES)
-option(ENABLE_ISAC "" YES)
-option(ENABLE_SILK "" YES)
-#option(ENABLE_SPEEX "" YES)
-option(ENABLE_SPEEX_CODEC "Build mediastreamer2 with the SPEEX codec." YES)
-option(ENABLE_SPEEX_DSP "Build mediastreamer2 with the SPEEX DSP support." YES)
-option(ENABLE_H263 "" YES)
-option(ENABLE_H263P "" YES)
-option(ENABLE_MPEG4 "" YES)
-option(ENABLE_OPENH264 "Embedded OpenH264" YES)
-option(ENABLE_VPX "Build mediastreamer2 with VPX codec." YES)
-option(ENABLE_MKV "Enable support of MKV files reading and writing." YES)
-if(WIN32 OR APPLE)
-    option(ENABLE_FFMPEG "Build mediastreamer2 with ffmpeg video support." YES)
-    option(ENABLE_OPUS "Build mediastreamer2 with the OPUS codec." YES)
-else()##Opus crash on Linux. The version for 4.3 is old. We have to use a switch in configuration to select the newest version for desktop.
-    option(ENABLE_OPUS "Build mediastreamer2 with the OPUS codec." YES)
-    option(ENABLE_FFMPEG "Build mediastreamer2 with ffmpeg video support." NO)
-endif()
+#option(ENABLE_GPL_THIRD_PARTIES "" YES)
+#option(ENABLE_NON_FREE_CODECS "Allow inclusion of non-free codecs in the build." YES)
+#option(ENABLE_AMRNB "" YES)
+#option(ENABLE_AMRWB "" YES)
+#option(ENABLE_BV16 "Build mediastreamer2 with the BV16 codec." YES)
+#option(ENABLE_G729 "Build mediastreamer2 with the G726 codec." YES)
+##option(ENABLE_G729B_CNG "Build mediastreamer2 with G729 annex B cng." NO)
+#option(ENABLE_GSM "Build mediastreamer2 with the GSM codec." YES)
+#option(ENABLE_ILBC "" YES)
+#option(ENABLE_ISAC "" YES)
+#option(ENABLE_SILK "" YES)
+##option(ENABLE_SPEEX "" YES)
+#option(ENABLE_SPEEX_CODEC "Build mediastreamer2 with the SPEEX codec." YES)
+#option(ENABLE_SPEEX_DSP "Build mediastreamer2 with the SPEEX DSP support." YES)
+#option(ENABLE_H263 "" YES)
+#option(ENABLE_H263P "" YES)
+#option(ENABLE_MPEG4 "" YES)
+#option(ENABLE_OPENH264 "Embedded OpenH264" YES)
+#option(ENABLE_VPX "Build mediastreamer2 with VPX codec." YES)
+#option(ENABLE_MKV "Enable support of MKV files reading and writing." YES)
+#if(WIN32 OR APPLE)
+    #option(ENABLE_FFMPEG "Build mediastreamer2 with ffmpeg video support." YES)
+    #option(ENABLE_OPUS "Build mediastreamer2 with the OPUS codec." YES)
+#else()##Opus crash on Linux. The version for 4.3 is old. We have to use a switch in configuration to select the newest version for desktop.
+#    option(ENABLE_OPUS "Build mediastreamer2 with the OPUS codec." YES)
+    #option(ENABLE_FFMPEG "Build mediastreamer2 with ffmpeg video support." NO)
+#endif()
 
 add_subdirectory("linphone-sdk" "linphone-sdk/build-sdk")
 add_subdirectory(submodules/externals/minizip "submodules/externals/minizip/build-minizip")
