--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,12 +166,14 @@ if( NOT (LinphoneCxx_FOUND))
     message("Linphone packages are not installed. Build and install it in order to build Minizip and then Desktop Application.")
 elseif()
 # Linphone SDK has been builded
+    message("LINPHONECXX : ${LINPHONECXX_INCLUDE_DIRS} => ${LINPHONECXX_LIBRARIES}")
     add_subdirectory(submodules/externals/minizip "submodules/externals/minizip/build-minizip")
     add_dependencies(minizip sdk)    
     find_package(Minizip)    
     if( NOT(Minizip_FOUND))
         message("Minizip are not installed. Build and install it in order to build Desktop Application.")
     else()
+        message("MINIZIP : ${MINIZIP_INCLUDE_DIRS} => ${MINIZIP_LIBRARIES}")
         message("INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} FRAMEWORK_PATH=${CMAKE_FRAMEWORK_PATH}")
         message("LINPHONE : ${LINPHONE_INCLUDE_DIRS} => ${LINPHONE_LIBRARIES}")
         message("LINPHONECXX : ${LINPHONECXX_INCLUDE_DIRS} => ${LINPHONECXX_LIBRARIES}")
