Fix libminizip finding for linux linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -585,10 +585,12 @@ else()
         if(APPLE)
                 target_link_libraries(${TARGET_NAME} "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib/libminizip.dylib")
         elseif(NOT WIN32)
-                if( EXISTS "${CMAKE_INSTALL_PREFIX}/lib64/libminizip.so")
-                        target_link_libraries(${TARGET_NAME} "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib64/libminizip.so")
-                elseif(EXISTS "${CMAKE_INSTALL_PREFIX}/lib/libminizip.so")
-                        target_link_libraries(${TARGET_NAME} "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib/libminizip.so")
+                if( EXISTS "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib64/libminizip.so")
+                    target_link_libraries(${TARGET_NAME} "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib64/libminizip.so")
+                elseif(EXISTS "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib/libminizip.so")
+                    target_link_libraries(${TARGET_NAME} "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib/libminizip.so")
+                else()
+                    message("Error cannot find ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib*/libminizip.so while linking")                    
                 endif()
         endif()
     endif()#If (LinphoneCxx_FOUND AND Minizip_FOUND)
