Fix search path for libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ list(APPEND CMAKE_PREFIX_PATH "${CMAKE_BINARY_DIR}/linphone-sdk/desktop;${CMAKE_
 message("${CMAKE_PREFIX_PATH}")
 set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/OUTPUT")
 if(UNIX AND NOT APPLE)
-    set(CMAKE_INSTALL_RPATH "$ORIGIN/lib64;$ORIGIN/../lib64;$ORIGIN/lib;$ORIGIN/../lib")
+    set(CMAKE_INSTALL_RPATH "$ORIGIN;$ORIGIN/lib64;$ORIGIN/../lib64;$ORIGIN/lib;$ORIGIN/../lib")
     set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 endif()
 #set_property(GLOBAL PROPERTY USE_FOLDERS ON)
@@ -583,14 +583,14 @@ else()
         #endif ()
 
         if(APPLE)
-                target_link_libraries(${TARGET_NAME} "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib/libminizip.dylib")
+                target_link_libraries(${TARGET_NAME} "${CMAKE_INSTALL_PREFIX}/lib/libminizip.dylib")
         elseif(NOT WIN32)
-                if( EXISTS "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib64/libminizip.so")
-                    target_link_libraries(${TARGET_NAME} "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib64/libminizip.so")
-                elseif(EXISTS "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib/libminizip.so")
-                    target_link_libraries(${TARGET_NAME} "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib/libminizip.so")
+                if( EXISTS "${CMAKE_INSTALL_PREFIX}/lib64/libminizip.so")
+                    target_link_libraries(${TARGET_NAME} "${CMAKE_INSTALL_PREFIX}/lib64/libminizip.so")
+                elseif(EXISTS "${CMAKE_INSTALL_PREFIX}/lib/libminizip.so")
+                    target_link_libraries(${TARGET_NAME} "${CMAKE_INSTALL_PREFIX}/lib/libminizip.so")
                 else()
-                    message("Error cannot find ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/lib*/libminizip.so while linking")                    
+                    message("Error cannot find ${CMAKE_INSTALL_PREFIX}/lib*/libminizip.so while linking")                    
                 endif()
         endif()
     endif()#If (LinphoneCxx_FOUND AND Minizip_FOUND)
