Add verbose for Linux CI

--- a/.gitlab-ci-files/job-linux-desktop.yml
+++ b/.gitlab-ci-files/job-linux-desktop.yml
@@ -19,7 +19,7 @@
 # SDK Building
     - cd build-desktop
     - cmake .. -G "$CMAKE_GENERATOR" -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
-    - cmake --build . --target all $LBC_NODEBUG_OPTIONS
+    - cmake --build . --target all --verbose $LBC_NODEBUG_OPTIONS
 # Minizip install to OUTPUT folder
     - cmake ..
     - cmake --build . --target minizip $LBC_NODEBUG_OPTIONS
