Test before copy dir

--- a/cmake_builder/linphone_package/CMakeLists.txt
+++ b/cmake_builder/linphone_package/CMakeLists.txt
@@ -258,9 +258,12 @@ else()# Not Windows and Apple
     #endif()
   endforeach ()  
   install(DIRECTORY "${LINPHONE_SDK_TMP}/bin/" DESTINATION "bin" USE_SOURCE_PERMISSIONS)
-  install(DIRECTORY "${LINPHONE_SDK_TMP}/lib/" DESTINATION "lib" USE_SOURCE_PERMISSIONS)
+#Just in case. This is useless because we have to use CMAKE_INSTALL_LIBDIR  
+  if( EXISTS "${LINPHONE_SDK_TMP}/lib/")
+    install(DIRECTORY "${LINPHONE_SDK_TMP}/lib/" DESTINATION "lib" USE_SOURCE_PERMISSIONS)
+  endif()
   if( EXISTS "${LINPHONE_SDK_TMP}/lib64/")
-	install(DIRECTORY "${LINPHONE_SDK_TMP}/lib64/" DESTINATION "lib" USE_SOURCE_PERMISSIONS)
+	install(DIRECTORY "${LINPHONE_SDK_TMP}/lib64/" DESTINATION "lib64" USE_SOURCE_PERMISSIONS)
   endif()
   install(DIRECTORY "${LINPHONE_SDK_TMP}/share/" DESTINATION "share" USE_SOURCE_PERMISSIONS)
   #install(PROGRAMS "${CMAKE_INSTALL_PREFIX}/bin/${EXECUTABLE_NAME}" DESTINATION "/bin")
